--- a/WebContent/01-基础/06-背景.html
+++ b/WebContent/01-基础/06-背景.html
@@ -55,6 +55,12 @@
 		height: 100px;	
 		background-repeat: repeat;
 	}
+	#div6{
+		background-image: url(../img/background_small.jpg);
+		width:200px;
+		height: 100px;
+		background-size:contain;
+	}
 </style>
 </head>
 <body>
@@ -97,6 +103,10 @@
 	</div>
 	<div id="div5">
 		背景水平、垂直都重复
+	</div>
+	<h3>4、背景平铺：</h3>
+	<div id="div6">
+		背景平铺，通过拉伸实现，会有失真
 	</div>
 </body>
 </html>
